rimozione code smell 23